--- a/.gitignore
+++ b/.gitignore
@@ -59,5 +59,5 @@ buck-out/
 /ios/Pods/
 
 #firebase
-google-services.json
-GoogleService-Info.plist
+# google-services.json
+# GoogleService-Info.plist
